<resources>
    <string name="app_name">Iberica</string>

    <!-- Login -->
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>

    <!-- Buttons -->
    <string name="login">Iniciar sesión</string>
    <string name="save">Guardar</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>

    <!-- Message -->
    <string name="invalid_credentials">Usuario o contraseña incorrectas</string>
    <string name="empty_fields">Campos vacíos, por favor, ingresa la información.</string>
    <string name="add_successful">Se agregó la nota correctamente</string>
    <string name="update_successful">La nota se actualizó correctamente</string>
    <string name="delete_successful">La nota se eliminó correctamente</string>

    <string name="title_not">Título</string>
    <string name="desc_note">Descripción</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>